[tool.poetry]
name = "pyUnfoldedCircleRemote"
version = "0.15.6"
description = "A python library to interact with the Unfolded Circle Remote"
authors = ["Jack Powell <jackjpowell@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackjpowell/py-unfolded-circle"
packages = [{include = "pyUnfoldedCircleRemote", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"